--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -40,8 +40,6 @@ foreach (config "" ${CMAKE_BUILD_TYPE} ${CMAKE_CONFIGURATION_TYPES})
   endforeach (var)
 endforeach (config)
 
-include(CheckCCompilerFlag)
-
 if (UNIX)
   CHECK_C_COMPILER_FLAG("-Wno-unused-but-set-variable" nounused_avail)
 endif(UNIX)
@@ -94,9 +92,9 @@ endfunction(append_compile_flags)
 
 function(set_props target)
   if (UNIX)
-    if (HAVE_FVISIBILITY)
+    if (HAVE_FVISIBILITY_INTERNAL OR HAVE_FVISIBILITY_HIDDEN)
       set(defs ${defs} USE_VISIBILITY_ATTRIBUTES)
-    endif (HAVE_FVISIBILITY)
+    endif ()
   endif (UNIX)
   if (VMKERNEL)
     set(defs ${defs} VMX86_SERVER)
