--- a/tests/app_suite/CMakeLists.txt
+++ b/tests/app_suite/CMakeLists.txt
@@ -56,6 +56,7 @@ if (UNIX)
   if (ANDROID)
     append_compile_flags(app_suite_tests "-DANDROID")
   endif ()
+  append_compile_flags(app_suite_tests "-Wno-unused-private-field")
 elseif (WIN32)
   # Work around googletest VS2012 failures by upping _VARIADIC_MAX from 5 (i#1141)
   append_compile_flags(app_suite_tests "-DWIN32 -D_VARIADIC_MAX=10")
