--- a/.travis.yml
+++ b/.travis.yml
@@ -59,4 +59,4 @@ install:
   - if [[ "`uname`" == "Linux" ]]; then sudo apt-get -y install g++-multilib doxygen transfig; fi
 
 script:
-  - suite/runsuite_wrapper.pl travis
+  - tests/runsuite_wrapper.pl travis
