i#1902: separate leak test to reduce flakiness
Moves the leak indirect chain test code from malloc.c, where it results in
non-deterministic behavior presumably due to the earlier faults and
corner-case allocator actions, into a new test leak_indirect.c.

Fixes #1902

Review-URL: https://codereview.appspot.com/306790043

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -416,6 +416,7 @@ if (NOT X64 AND NOT ARM)
 # Leaving indentation as-is to avoid code churn
 newtest(hello hello.c)
 newtest(malloc malloc.c)
+newtest(leak_indirect leak_indirect.c)
 newtest(free free.c)
 if (ARM)
   newtest_ex(free_arm free.c "" "" "" OFF "free" 0)
